Coordinates system overhaul and rendering rule improvements

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -15,7 +15,7 @@
                     <form id="searchForm" class="form-inline">
                         <div class="form-group">
                             <label for="userNameField">UserName:</label>
-                            <input id="userNameField" type="text" name="userName" required="required" value="Dakota" />
+                            <input id="userNameField" type="text" name="userName" required="required" value="I AM SPARTA!!1!" />
                         </div>
                         <button type="submit" class="btn btn-default">Run Analysis</button>
                     </form>
