--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CoC War Base Analyser</title>
+        <title>War Base Analyser</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="/assets/main.css" />
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h3>CoC War Base Analyser</h3>
+                    <h3>War Base Analyser</h3>
                     <p>Search for a userName (can only be within the approved clans) and an analysis will be run on their active village</p>
                     <form id="searchForm" class="form-inline">
                         <div class="form-group">
@@ -51,12 +51,17 @@
         </script>
 
         <script type="text/javascript" src="//code.jquery.com/jquery-2.2.1.min.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/js-signals/1.0.0/js-signals.min.js"></script>
         <script type="text/javascript" src="//code.createjs.com/easeljs-0.8.2.min.js"></script>
         <script type="text/javascript" src="//code.createjs.com/preloadjs-0.6.2.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jStorage/0.4.12/jstorage.min.js"></script>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="/assets/main.js"></script>
+        <script type="text/javascript" src="/assets/js/preloader.js"></script>
+        <script type="text/javascript" src="/assets/js/model.js"></script>
+        <script type="text/javascript" src="/assets/js/map2d.js"></script>
+        <script type="text/javascript" src="/assets/js/ui.js"></script>
+        <script type="text/javascript" src="/assets/js/main.js"></script>
     </body>
 </html>
