--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -27,7 +27,7 @@
                     <h4>Results</h4>
                     <div id="results-panel-group" class="panel-group" role="tablist" aria-multiselectable="false"></div>
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9" id="map-container">
                     <canvas id="villageImage"></canvas>
                 </div>
             </div>
