--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -46,8 +46,7 @@
                         <a href="#">
                             {{title}}
                         </a>
-                        <a class="toggle-header do-show">show me</a>
-                        <a class="toggle-header do-hide">hide [x]</a>
+                        <a class="do-show">show me</a>
                     </h4>
                 </div>
                 <div id="collapse-{{id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading-{{id}}" data-rule-name="{{ruleName}}">
