Added notice about being an alpha version

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -12,6 +12,9 @@
                 <div class="col-md-12">
                     <h3>War Base Analyser</h3>
                     <p>Search for an IGN (can only be within the approved clans) and an analysis will be run on their active village</p>
+                    <div class="alert alert-info">
+                        <strong>Note!</strong> this is an early alpha version. Any feedback or bug reports are much appreciated
+                    </div>
                     <form id="searchForm" class="form-inline">
                         <div class="form-group">
                             <label for="userNameField">UserName:</label>
