Experiment with alternative sprite sheets

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -69,8 +69,10 @@
         <script type="text/javascript" src="/assets/js/console-polyfill.js"></script>
         <script type="text/javascript" src="/assets/js/preloader.js"></script>
         <script type="text/javascript" src="/assets/js/model.js"></script>
-        <script type="text/javascript" src="/assets/js/BuildingSpriteSheet.js"></script>
-        <script type="text/javascript" src="/assets/js/WallSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/RedMoonBuildingSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/RedMoonBuildingSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/RedMoonWallSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/SpriteSheet.js"></script>
         <script type="text/javascript" src="/assets/js/mapDisplay2d.js"></script>
         <script type="text/javascript" src="/assets/js/ui.js"></script>
         <script type="text/javascript" src="/assets/js/main.js"></script>
