--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -17,10 +17,21 @@
                     </div>
                     <form id="searchForm" class="form-inline">
                         <div class="form-group">
-                            <label for="userNameField">UserName:</label>
+                            <label for="userNameField">IGN:</label>
                             <input id="userNameField" type="text" name="userName" required="required" value="" />
                         </div>
-                        <button type="submit" class="btn btn-default">Run Analysis</button>
+                        <div class="form-group">
+                            <label>Layout:</label>
+                            <label class="radio-inline">
+                                <input name="layout" type="radio" id="layoutHome" value="home" checked="checked" /> Home
+                            </label>
+                            <label class="radio-inline">
+                                <input name="layout" type="radio" id="layoutWar" value="war" /> War
+                            </label>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-default">Run Analysis</button>
+                        </div>
                     </form>
                 </div>
             </div>
