Bulk analysis start

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -86,6 +86,6 @@
         <script type="text/javascript" src="/assets/js/SpriteSheet.js"></script>
         <script type="text/javascript" src="/assets/js/mapDisplay2d.js"></script>
         <script type="text/javascript" src="/assets/js/ui.js"></script>
-        <script type="text/javascript" src="/assets/js/main.js"></script>
+        <script type="text/javascript" src="/assets/js/mainAnalyse.js"></script>
     </body>
 </html>
