Bulk war bases analysis

--- a/src/main/resources/web/war-bases.html
+++ b/src/main/resources/web/war-bases.html
@@ -4,6 +4,14 @@
         <title>Bulk War Bases Analysis</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+        <style type="text/css">
+            tr.fail {
+                background: #ffcccc;
+            }
+            .glyphicon-remove-sign {
+                color: #ff5555;
+            }
+        </style>
     </head>
     <body>
         <div class="container-fluid">
