War bases summary page overhaul

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -13,7 +13,9 @@
                     <h3>War Base Analyser</h3>
                     <p>Search for an IGN (can only be within the approved clans) and an analysis will be run on their active village</p>
                     <div class="alert alert-info">
-                        <strong>Note!</strong> this is an early alpha version. Any feedback or bug reports are much appreciated
+                        <strong>Note!</strong> this is an alpha release. The connection to the game is a bit unreliable
+                        and you might need to refresh sometimes to try it again and get it work. Hidden Teslas are not
+                        yet implemented, this will be available soon. Any feedback or bug reports are much appreciated
                     </div>
                     <form id="searchForm" class="form-inline">
                         <div class="form-group">
@@ -78,14 +80,14 @@
         <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jStorage/0.4.12/jstorage.min.js"></script>
         <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
         <script type="text/javascript" src="/assets/js/console-polyfill.js"></script>
-        <script type="text/javascript" src="/assets/js/preloader.js"></script>
-        <script type="text/javascript" src="/assets/js/model.js"></script>
-        <script type="text/javascript" src="/assets/js/RedMoonBuildingSpriteSheet.js"></script>
-        <script type="text/javascript" src="/assets/js/RedMoonBuildingSpriteSheet.js"></script>
-        <script type="text/javascript" src="/assets/js/RedMoonWallSpriteSheet.js"></script>
-        <script type="text/javascript" src="/assets/js/SpriteSheet.js"></script>
-        <script type="text/javascript" src="/assets/js/mapDisplay2d.js"></script>
-        <script type="text/javascript" src="/assets/js/ui.js"></script>
-        <script type="text/javascript" src="/assets/js/mainAnalyse.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/preloader.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/model.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/RedMoonBuildingSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/RedMoonBuildingSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/RedMoonWallSpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/SpriteSheet.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/mapDisplay2d.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/ui.js"></script>
+        <script type="text/javascript" src="/assets/js/base-analysis/main.js"></script>
     </body>
 </html>
