Refined BK Swappable rule

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -14,7 +14,7 @@
                     <p>Search for an IGN (can only be within the approved clans) and an analysis will be run on their active village</p>
                     <div class="alert alert-info">
                         <strong>Note!</strong> this is an alpha release. The connection to the game is a bit unreliable
-                        and you might need to refresh sometimes to try it again and get it work. Hidden Teslas are not
+                        and you might need to refresh sometimes to try it again and get it to work. Hidden Teslas are not
                         yet implemented, this will be available soon. Any feedback or bug reports are much appreciated
                     </div>
                     <form id="searchForm" class="form-inline">
